--- a/.github/workflows/pipelinesetup_SeleniumWebDriver.yaml
+++ b/.github/workflows/pipelinesetup_SeleniumWebDriver.yaml
@@ -1,11 +1,12 @@
 name: Selenium WebDriver CI
+
 on:
   push:
     branches:
-      -main
+      - main
   pull_request:
     branches:
-      -main
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,23 +14,28 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      
     - name: Set up .Net
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+        
     - name: Install dependencies
       run: dotnet restore
+      
     - name: Build
       run: dotnet build --no-restore
     - name: Run tests for TestProject1
       run: |
-        echo "Running TestProject1"
+        echo "Running TestProject1 tests"
         dotnet test TestProject1/TestProject1.csproj --verbosity-normal
+        
     - name: Run tests for TestProject2
       run: |
-        echo "Running TestProject2"
+        echo "Running TestProject2 tests"
         dotnet test TestProject2/TestProject2.csproj --verbosity-normal
+        
     - name: Run tests for TestProject3
       run: |
-        echo "Running TestProject3"
+        echo "Running TestProject3 tests"
         dotnet test TestProject3/TestProject3.csproj --verbosity-normal
