--- a/.github/workflows/pipelinesetup_SeleniumWebDriver.yaml
+++ b/.github/workflows/pipelinesetup_SeleniumWebDriver.yaml
@@ -28,14 +28,14 @@ jobs:
     - name: Run tests for TestProject1
       run: |
         echo "Running TestProject1 tests"
-        dotnet test TestProject1/TestProject1.csproj --verbosity-normal
+        dotnet test TestProject1/TestProject1.csproj --verbosity normal
         
     - name: Run tests for TestProject2
       run: |
         echo "Running TestProject2 tests"
-        dotnet test TestProject2/TestProject2.csproj --verbosity-normal
+        dotnet test TestProject2/TestProject2.csproj --verbosity normal
         
     - name: Run tests for TestProject3
       run: |
         echo "Running TestProject3 tests"
-        dotnet test TestProject3/TestProject3.csproj --verbosity-normal
+        dotnet test TestProject3/TestProject3.csproj --verbosity normal
