--- a/.github/workflows/pipelinesetup_SeleniumWebDriver.yaml
+++ b/.github/workflows/pipelinesetup_SeleniumWebDriver.yaml
@@ -27,15 +27,21 @@ jobs:
       run: dotnet build --no-restore
     - name: Run tests for TestProject1
       run: |
+        echo "Setting executable permissions for selenium-manager"
+        chmod +x TestProject1/bin/Debug/net6.0/selenium-manager/linux/selenium-manager
         echo "Running TestProject1 tests"
         dotnet test TestProject1/TestProject1.csproj --verbosity normal
         
     - name: Run tests for TestProject2
       run: |
+        echo "Setting executable permissions for selenium-manager"
+        chmod +x TestProject2/bin/Debug/net6.0/selenium-manager/linux/selenium-manager
         echo "Running TestProject2 tests"
         dotnet test TestProject2/TestProject2.csproj --verbosity normal
         
     - name: Run tests for TestProject3
       run: |
+        echo "Setting executable permissions for selenium-manager"
+        chmod +x TestProject3/bin/Debug/net6.0/selenium-manager/linux/selenium-manager
         echo "Running TestProject3 tests"
         dotnet test TestProject3/TestProject3.csproj --verbosity normal
